# road-to-rust-hero

./: .gitignore  LICENSE  flake.nix
01-guessing-game/src/: game.rs  guess.rs  helpers.rs  lib.rs  main.rs
02-minigrep/: Cargo.toml
02-minigrep/src/: config.rs  lib.rs  main.rs  search.rs
03-web-server/src/: lib.rs  main.rs
04-cpu-emulator/src/: main.rs
05-actionkv/: .gitignore  Cargo.toml
05-actionkv/src/: lib.rs  main.rs
06-raw-http-get/: Cargo.toml
06-raw-http-get/src/: dns.rs  ethernet.rs  http.rs  main.rs
07-ntp-clock/: Cargo.toml
07-ntp-clock/src/: clock.rs  main.rs  ntp.rs
08-avatar-gen/: Cargo.toml
08-avatar-gen/src/: main.rs
09-redis-clone/: Cargo.toml
09-redis-clone/examples/: hello-redis.rs
09-redis-clone/src/: connection.rs
11-wasm-game-of-life/: Cargo.toml  LICENSE_MIT
11-wasm-game-of-life/src/: lib.rs
11-wasm-game-of-life/www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
12-monkey-interpreter/: Cargo.toml  rustfmt.toml
12-monkey-interpreter/src/: main.rs
12-monkey-interpreter/src/evaluate/: mod.rs
12-monkey-interpreter/src/lexer/: mod.rs  token.rs
12-monkey-interpreter/src/lexing/: lexer.rs  token.rs
12-monkey-interpreter/src/parser/: ast.rs  mod.rs
12-monkey-interpreter/src/parsing/: mod.rs  parser.rs
12-ratatui-json-editor/: Cargo.toml
12-ratatui-json-editor/src/: app.rs  main.rs  ui.rs
